--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - 8000:8000
     volumes:
       - ./src:/src
+    env_file: .env
   postgres:
     image: postgres
     container_name: postgres
@@ -16,7 +17,7 @@ services:
       POSTGRES_PASSWORD: password
       PGDATA: /db/database
     volumes:
-     - ./db/postgres:/db/postgres
+      - ./db/postgres:/db/postgres
     ports:
       - 5432:5432
   redis:
@@ -24,6 +25,6 @@ services:
     container_name: redis
     command: redis-server --requirepass password
     volumes:
-     - ./db/redis:/db/redis
+      - ./db/redis:/db/redis
     ports:
       - 6379:6379
