--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - 8000:8000
     volumes:
       - ./app:/app
+      - ./alembic:/alembic
     env_file: .env
     depends_on:
       - postgres
