--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - ${APP_PORT}:${APP_PORT}
     volumes:
       - ./app:/app
+      - ./alembic:/alembic
     env_file: .env
     depends_on:
       - postgres
