--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,19 +1,14 @@
-
-
 name: Deploy to AWS ECR
-
 on:
   push:
     branches: [develop]
 
 jobs:
-
   build:
-
     name: Build Image
     runs-on: ubuntu-latest
     steps:
-    
+  
       - name: Check out code
         uses: actions/checkout@v2
 
@@ -34,7 +29,7 @@ jobs:
           ECR_REPOSITORY: meduzzen
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker compose -f compose.yml build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker compose -f "compose.yml" build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           echo "Pushing image to ECR..."
-          docker compose -f compose.yml push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker compose -f "compose.yml" push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
