--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -29,7 +29,6 @@ jobs:
           ECR_REPOSITORY: meduzzen
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker compose -f "compose.yml" build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker compose -f "compose.yml" build
           echo "Pushing image to ECR..."
-          docker compose -f "compose.yml" push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker compose -f "compose.yml" push
