--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,14 +1,19 @@
+
+
 name: Deploy to AWS ECR
+
 on:
   push:
     branches: [develop]
 
 jobs:
+
   build:
+
     name: Build Image
     runs-on: ubuntu-latest
     steps:
-  
+    
       - name: Check out code
         uses: actions/checkout@v2
 
@@ -28,17 +33,8 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: meduzzen
           IMAGE_TAG: ${{ github.sha }}
-          POSTGRES_URL: postgres
-          POSTGRES_PORT: 5432
-          POSTGRES_DB: db
-          POSTGRES_USER: pguser
-          POSTGRES_PASSWORD: password
-          REDIS_URL: redis/db
-          REDIS_PORT: 6379
-          REDIS_PASSWORD: password
-          APP_PORT: 8000
-          APP_HOST: 0.0.0.0
         run: |
-          docker compose -f "compose.yml" build
+          docker compose -f compose.yml build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           echo "Pushing image to ECR..."
-          docker compose -f "compose.yml" push
+          docker compose -f compose.yml push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
