--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -63,7 +63,7 @@ jobs:
           echo SECRET_KEY=$SECRET_KEY >> .env
           echo AUTH0_AUDIENCE=$AUTH0_AUDIENCE >> .env
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
-          docker compose -f compose.yml build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker compose -f compose.yml build
           echo "Pushing image to ECR..."
           docker compose -f compose.yml push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
