--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -60,5 +60,5 @@ jobs:
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
           docker compose -f compose.yml build
           echo "Pushing image to ECR..."
-          docker compose -f compose.yml push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker compose -f compose.yml push $ECR_REGISTRY/$ECR_REPOSITORY
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
