--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
           aws-region: eu-north-1
 
       - name: Login to Amazon ECR
@@ -43,7 +44,6 @@ jobs:
           AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
           AUTH0_PUBLIC_URL: ${{ secrets.AUTH0_PUBLIC_URL }}
         run: |
-          echo ${{ steps.login-ecr.outputs.registry }}
           touch .env
           echo PYTHONPATH=$PYTHONPATH >> .env
           echo POSTGRES_URL=$POSTGRES_URL >> .env
