--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: eu-north-1
 
       - name: Login to Amazon ECR
