--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -59,7 +59,7 @@ jobs:
           echo SECRET_KEY=$SECRET_KEY >> .env
           echo AUTH0_AUDIENCE=$AUTH0_AUDIENCE >> .env
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
-          docker compose -f compose.yml build
+          
+          docker compose -f compose.yml build $ECR_REGISTRY/$ECR_REPOSITORY
           echo "Pushing image to ECR..."
-          docker compose -f compose.yml push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker compose -f compose.yml push $ECR_REGISTRY/$ECR_REPOSITORY
