--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,7 +24,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Create .env
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: meduzzen
@@ -59,7 +59,10 @@ jobs:
           echo SECRET_KEY=$SECRET_KEY >> .env
           echo AUTH0_AUDIENCE=$AUTH0_AUDIENCE >> .env
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
-          
-          docker compose -f compose.yml build $ECR_REGISTRY/$ECR_REPOSITORY
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker compose -f compose.yml build $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "Pushing image to ECR..."
-          docker compose push $ECR_REGISTRY/$ECR_REPOSITORY
+          docker compose push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
