--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,9 +26,6 @@ jobs:
 
       - name: Create .env
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: meduzzen
-          IMAGE_TAG: ${{ github.sha }}
           PYTHONPATH: ${{ secrets.PYTHONPATH }}
           POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
           POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
@@ -61,6 +58,8 @@ jobs:
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
       - name: Build, tag, and push image to Amazon ECR
         env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker compose -f compose.yml build $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
