--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -62,5 +62,5 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: fastapiApp
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker compose -f "compose.yml" build
+          docker compose push $ECR_REGISTRY/$ECR_REPOSITORY
