--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -62,5 +62,5 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: fastapiApp
         run: |
-          docker compose -t $ECR_REGISTRY/$ECR_REPOSITORY:fastapiApp build fastapiApp 
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:fastapiApp
+          docker compose build
+          docker push fastapiapp
