--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -62,5 +62,5 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: fastapiApp
         run: |
-          docker compose build
-          docker push fastapiapp
+          docker compose -f "deploy.yml" build
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:fastapiapp
