--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres
+    image: $ECR_REGISTRY/$ECR_REPOSITORY:postgres
     container_name: postgres
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
@@ -18,7 +18,7 @@ services:
       retries: 5
       start_period: 10s
   redis:
-    image: redis
+    image: $ECR_REGISTRY/$ECR_REPOSITORY:redis
     container_name: redis
     command: redis-server --requirepass ${REDIS_PASSWORD}
     volumes:
