--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -45,5 +45,4 @@ jobs:
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
       - name: Docker create containers
         run: |
-          aws --help
-
+          sudo docker context create ecs myecs
