--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,4 +47,4 @@ jobs:
         run: |
           aws --profile default configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws --profile default configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          sudo docker context create ecs myecs
+          sudo docker context create ecs default
