--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -48,4 +48,4 @@ jobs:
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
           aws --profile default configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws --profile default configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          sudo docker context create ecs
+          sudo docker context create ecs mycontext
