--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Docker create containers
         run: |
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
-          sudo docker context create ecs mycontext <<< env
-
+          docker context create ecs myecs <<< env
+          docker context use myecscontext
