--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -19,7 +19,8 @@ env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
   AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
   AUTH0_PUBLIC_URL: ${{ secrets.AUTH0_PUBLIC_URL }}
-
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 jobs:
   Integration:
     runs-on: ubuntu-latest
