--- a/compose.yml
+++ b/compose.yml
@@ -32,7 +32,7 @@ services:
       retries: 5
       start_period: 10s
   fastapiApp:
-    image: fastapiapp
+    image: 365834167077.dkr.ecr.eu-north-1.amazonaws.com/meduzzen:fastapiapp
     container_name: fastapiApp
     build:
       dockerfile: Dockerfile
