--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -19,8 +19,7 @@ env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
   AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
   AUTH0_PUBLIC_URL: ${{ secrets.AUTH0_PUBLIC_URL }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  ECR_REPOSITORY: meduzzen
 jobs:
   Integration:
     runs-on: ubuntu-latest
@@ -44,11 +43,23 @@ jobs:
           echo SECRET_KEY=$SECRET_KEY >> .env
           echo AUTH0_AUDIENCE=$AUTH0_AUDIENCE >> .env
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
       - name: Docker create containers
+        env: ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
           docker context create ecs myecs <<< env
           docker context use myecs
           docker context ls  
+          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:fastapiapp
           docker compose -f 'compose.yml' up
           docker compose ps
