--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,7 +54,8 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       - name: Docker create containers
-        env: ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        env: 
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
           docker context create ecs myecs <<< env
