--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -58,9 +58,8 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
-
           docker context create ecs myecs <<< env
           docker context use myecs
           docker context ls  
-          docker compose -f 'compose.yml' up
+          docker compose -f 'deploy.yml' up
           docker compose ps
