--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -58,7 +58,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
-          docker build Dockerfile.Deploy -t fastapiapp
+          docker build -t fastapiapp Dockerfile.Deploy 
           docker context create ecs myecs <<< env
           docker context use myecs
           docker context ls  
