--- a/deploy.yml
+++ b/deploy.yml
@@ -28,7 +28,7 @@ services:
       retries: 5
       start_period: 10s
   fastapiApp:
-    image: fastapiapp
+    image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     container_name: fastapiApp
     build:
       dockerfile: Dockerfile.Deploy
