--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -61,7 +61,7 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile.Deploy .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
-          docker context create ecs myecs <<< env
+          sudo docker context create ecs myecs <<< env
           docker context use myecs
           docker build -t fastapiapp -f Dockerfile.Deploy .
           docker compose -f 'deploy.yml' up
