--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,6 +20,7 @@ env:
   AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
   AUTH0_PUBLIC_URL: ${{ secrets.AUTH0_PUBLIC_URL }}
   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+
 jobs:
   Integration:
     runs-on: ubuntu-latest
@@ -48,7 +49,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: eu-north-1
 
       - name: Login to Amazon ECR
         id: login-ecr
