--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - develop
 env:
-  PYTHONPATH: ${{ secrets.PYTHONPATH }}
   POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
   POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
   POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
@@ -19,8 +18,8 @@ env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
   AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
   AUTH0_PUBLIC_URL: ${{ secrets.AUTH0_PUBLIC_URL }}
-  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-
+  PYTHONPATH: /app
+  ECR_REPOSITORY: meduzzen
 jobs:
   Integration:
     runs-on: ubuntu-latest
