--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -13,8 +13,8 @@ env:
   REDIS_URL: ${{ secrets.REDIS_URL }}
   REDIS_PORT: ${{ secrets.REDIS_PORT }}
   REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
-  APP_PORT: ${{ secrets.APP_PORT }}
-  APP_HOST: ${{ secrets.APP_HOST }}
+  APP_PORT: 8000
+  APP_HOST: 0.0.0.0
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
   AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
   AUTH0_PUBLIC_URL: ${{ secrets.AUTH0_PUBLIC_URL }}
