--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -65,3 +65,4 @@ jobs:
           sudo docker context use myecs
           docker compose -f 'deploy.yml' up -d
           docker compose ps
+          docker compose logs
