--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -66,7 +66,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           curl -L https://raw.githubusercontent.com/docker/compose-cli/main/scripts/install/install_linux.sh | sh
           sudo docker context create ecs myecs <<< env
-          docker context use myecs
+          sudo docker context use myecs
           docker compose -f 'deploy.yml' up
           docker compose convert
           docker compose ps
