--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -57,7 +57,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: fastapiapp:${{ github.sha }}
+          IMAGE_TAG: fastapiapp
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
