--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -70,7 +70,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: taskdefinition.json
-          container-name: ${{ env.CONTAINER_NAME }}
+          container-name: fastapiApp
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
