--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -80,3 +80,6 @@ jobs:
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
+        run: |
+          echo ${{ env.ECS_SERVICE }}
+          echo ${{ env.ECS_CLUSTER }}
