--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,6 @@
 services:
   fastapiApp:
-      image: fastapiapp
+      image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
       container_name: fastapiApp
       build:
         dockerfile: Dockerfile.Deploy
