--- a/Dockerfile.Deploy
+++ b/Dockerfile.Deploy
@@ -7,6 +7,7 @@ COPY alembic.ini .
 COPY /alembic /alembic
 COPY /app /app
 COPY startup.sh .
+EXPOSE 8000
 ENV PYTHONPATH=/app
 ENV POSTGRES_URL=fastapipostgres.ccfvg6rojc9x.eu-north-1.rds.amazonaws.com
 ENV POSTGRES_PORT=5432
