--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,6 +20,11 @@ env:
   AUTH0_PUBLIC_URL: ${{ secrets.AUTH0_PUBLIC_URL }}
   PYTHONPATH: /app
   ECR_REPOSITORY: meduzzen
+  AWS_REGION: eu-north-1
+  EB_PACKAGE_S3_BUCKET_NAME: pizhukbucket
+  EB_APPLICATION_NAME: fastapiApp
+  EB_ENVIRONMENT_NAME: fastapiApp-env
+  DEPLOY_PACKAGE_NAME: fastapi_app_${{ github.sha }}.zip
 jobs:
   Integration:
     runs-on: ubuntu-latest
@@ -43,40 +48,13 @@ jobs:
           echo SECRET_KEY=$SECRET_KEY >> .env
           echo AUTH0_AUDIENCE=$AUTH0_AUDIENCE >> .env
           echo AUTH0_PUBLIC_URL=$AUTH0_PUBLIC_URL >> .env
+      - name: Create .zip
+        run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-north-1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG:  ${{ github.sha }}
-        run: |
-          docker build -f Dockerfile.Deploy -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-      - name: Download task definition
-        run: |
-          aws ecs describe-task-definition --task-definition fastapiTask --query taskDefinition > taskdefinition.json
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: taskdefinition.json
-          container-name: fastapiApp
-          image: ${{ steps.build-image.outputs.image }}
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Copy .zip to S3
+        run: aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME }}/
