--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ env:
   EB_ENVIRONMENT_NAME: fastapiApp-env
   DEPLOY_PACKAGE_NAME: fastapi_app_${{ github.sha }}.zip
 jobs:
-  Integration:
+  send-zip-to-bucket:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -58,3 +58,21 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
       - name: Copy .zip to S3
         run: aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME }}/
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [send-zip-to-bucket]
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Create new EB Applications
+        run: |
+          aws elasticbeanstalk create-application-version \
+          --application-name ${{env.EB_APPLICATION_NAME}} \
+          --source-bundle S3Bucket="${{env.EB_PACKAGE_S3_BUCKET_NAME}}", S3Key="${{env.DEPLOY_PACKAGE_NAME}}" \
+          --version-label "{{github.sha}}"
+      - name: Deploy new EB Application Version
+        run: aws elasticbeanstalk update-environment --environment-name ${{env.EB_ENVIRONMENT_NAME}} --version-label "{{github.sha}}"
