--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -69,4 +69,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
       - name: Create new EB Applications
-        run: ls
+        run: |
+          aws elasticbeanstalk create-application-version \
+          --application-name ${{env.EB_APPLICATION_NAME}} \
+          --source-bundle S3Bucket="${{env.EB_PACKAGE_S3_BUCKET_NAME}}",S3Key="${{env.DEPLOY_PACKAGE_NAME}}" \
+          --version-label "{{github.sha}}"
+      - name: Deploy new EB Application Version
+        run: aws elasticbeanstalk update-environment --environment-name ${{env.EB_ENVIRONMENT_NAME}} --version-label "{{github.sha}}"
