--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,7 +23,7 @@ env:
   AWS_REGION: eu-north-1
   EB_PACKAGE_S3_BUCKET_NAME: pizhukbucket
   EB_APPLICATION_NAME: fastapiApp
-  EB_ENVIRONMENT_NAME: fastapiApp-env
+  EB_ENVIRONMENT_NAME: myenv
   DEPLOY_PACKAGE_NAME: fastapi_app_${{ github.sha }}.zip
 jobs:
   send-zip-to-bucket:
@@ -75,4 +75,4 @@ jobs:
           --source-bundle S3Bucket="${{env.EB_PACKAGE_S3_BUCKET_NAME}}",S3Key="${{env.DEPLOY_PACKAGE_NAME}}" \
           --version-label "{{github.sha}}"
       - name: Deploy new EB Application Version
-        run: aws elasticbeanstalk update-environment --environment-name ${{env.EB_ENVIRONMENT_NAME}} --version-label "{{github.sha}}"
+        run: aws elasticbeanstalk update-environment --environment-name ${{env.EB_ENVIRONMENT_NAME}} --version-label "${{ github.sha }}"
